# unity-native-plugin-build

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  COPYING  README.md  build-ogg.sh  build-opus.sh  build.sh  dummy.c
opusfile/: CMakeLists.txt
opusfile-cmake/: CMakeLists.txt
sqlite3/: CMakeLists.txt  COPYING
sqlite3-cmake/: CMakeLists.txt
